<resources>
    <string name="app_name">HesGames</string>
    <string name="settings_activity_name">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic (System)</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>
</resources>