<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <androidx.preference.SwitchPreference-->
<!--        android:defaultValue="false"-->
<!--        android:key="@string/pref_key_notify"-->
<!--        android:summary="@string/pref_notify_summary"-->
<!--        android:title="@string/pref_notify_name" />-->

    <androidx.preference.ListPreference
        app:key="@string/pref_key_night"
        app:title="@string/pref_night_title"
        app:summary="@string/pref_night_summary"
        app:entries="@array/night_mode"
        android:entryValues="@array/night_mode_value"
        android:defaultValue="@string/pref_night_auto"
        android:dialogTitle="@string/pref_night_dialog"
        />

</androidx.preference.PreferenceScreen>